[package]
name = "nbcat"
version = "0.2.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"
description = "A command-line tool that displays .ipynb file like `cat` command"
repository = "https://github.com/moisutsu/nbcat"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
anyhow = "1.0.32"
clap = "3.0.0-beta.2"
base64 = "0.13.0"
image = "0.23.14"
viuer = "0.4.0"
terminal_size = "0.1.17"
once_cell = "1.8.0"
