[package]
name = "nbcat"
version = "0.2.6"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2021"
description = "A command-line tool that displays .ipynb file like `cat` command"
repository = "https://github.com/moisutsu/nbcat"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
anyhow = "1.0.32"
clap = { version = "3.0.0", features = ["derive"] }
base64 = "0.13.0"
image = "0.23.14"
viuer = "0.4.0"
once_cell = "1.8.0"
term_size = "0.3.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# A GitHub repo to push Homebrew formulas to
tap = "moisutsu/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew", "homebrew"]
